--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caption Generator with Hashtags</title>
+    <title>Reels with Hashtags</title>
     <style>
         /* Base styles */
         * {
@@ -126,6 +126,9 @@
             margin-top: 10px;
             font-size: 16px;
             color: var(--primary-color);
+        }
+        h1 {
+        padding-bottom: 20px;
         }
     </style>
 </head>
