--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
 
     <div class="container">
-        <h1>Caption Generator with Hashtags</h1>
+        <h1>Reels Captions with #Hash</h1>
         <div id="caption-box">Loading...</div>
         <button id="copy-button" onclick="copyAndNext()">Copy & Next</button>
         <div class="caption-info">
