--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 
         [data-theme="dark"] {
             /* Dark mode colors */
-            --background-color: #121212;
+            --background-color: #222020;
             --text-color: #e0e0e0;
-            --primary-color: #BB86FC;
-            --box-background-dark: #2c2c2c; /* Lighter than dark background */
-            --button-bg: #BB86FC;
-            --button-hover-bg: #8f6fc4;
+            --primary-color: #FF9800;
+            --box-background-dark: #242323; /* Lighter than dark background */
+            --button-bg: #FF9800;
+            --button-hover-bg: #FF5722;
         }
 
         .container {
@@ -61,22 +61,23 @@
             border: 2px solid var(--primary-color);
             border-radius: 5px;
             background-color: var(--box-background-light);
-            height: 150px;
-            width: 100%;
-            overflow: hidden;
+            height: 150px;  /* Fixed height */
+            width: 600px; /* Fixed width */
+            overflow: hidden; /* Prevent resizing */
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
             transition: background-color 0.3s;
-            white-space: pre-wrap; /* Preserves line breaks */
+            white-space: pre-wrap; /* Preserve whitespace */
+            overflow-wrap: break-word; /* Break long words */
         }
 
         [data-theme="dark"] #caption-box {
-            background-color: var(--box-background-dark);
+            background-color: var(--box-background-dark); /* Lighter box background for dark mode */
         }
 
-        #copy-button {
+        #copy-button, #reset-button {
             padding: 12px 25px;
             font-size: 16px;
             background-color: var(--button-bg);
@@ -85,9 +86,10 @@
             border-radius: 8px;
             cursor: pointer;
             transition: background-color 0.3s;
+            margin: 5px; /* Add margin for spacing */
         }
 
-        #copy-button:hover {
+        #copy-button:hover, #reset-button:hover {
             background-color: var(--button-hover-bg);
         }
 
@@ -108,27 +110,14 @@
         .theme-toggle:hover {
             background-color: var(--button-hover-bg);
         }
-
-        /* Responsive styling */
-        @media (max-width: 600px) {
-            #caption-box {
-                font-size: 16px;
-                width: 100%;
-            }
-            #copy-button {
-                font-size: 14px;
-                padding: 10px 20px;
-            }
+        h1 {
+        padding-bottom: 20px;
         }
-
         /* Style for caption info display */
         .caption-info {
             margin-top: 10px;
             font-size: 16px;
             color: var(--primary-color);
-        }
-        h1 {
-        padding-bottom: 20px;
         }
     </style>
 </head>
