--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             /* Light mode colors */
             --background-color: #000000;
             --text-color: #ffffff;
-            --primary-color: #007BFF;
-            --box-background-light: rgba(0, 123, 255, 0.1);
-            --button-bg: #007BFF;
-            --button-hover-bg: #0056b3;
+            --primary-color: #fb6f92;
+            --box-background-light: rgba(255, 229, 236, 1);
+            --button-bg: #ff8fab;
+            --button-hover-bg: #ffb3c6;
         }
 
         [data-theme="dark"] {
