New Theme! @harindujayakody

--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
             transition: background-color 0.3s, color 0.3s;
             position: relative;
         }
-
         :root {
-            /* Light mode colors */
-            --background-color: #000000;
-            --text-color: #ffffff;
-            --primary-color: #fb6f92;
-            --box-background-light: rgba(255, 229, 236, 1);
-            --button-bg: #ff8fab;
-            --button-hover-bg: #ffb3c6;
+        --background-color: #000000;
+        --text-color: #ffffff;
+        --primary-color: #f15c95;
+        --box-background-light: rgb(34 13 18 / 77%);
+        --button-bg: #ef476f;
+        --button-hover-bg: #f4a261;
         }
 
         [data-theme="dark"] {
